Various Makefile updates.
* The Top-Level Makefile now uses "$(MAKE) -C" to invoke sub-processes.
  Rationale: In the past we had students using *BSD - and those students
  had to use gmake ...

* Comments and updates for the tiniweb main Makefile
  + The students now only provide the source-files to be compiled
    Much safer with "make clean" - :)

  + Our Makefile can be used to compile with llvm-clang (and eventually
    to direcly compile to llvm bitcode) without changes.

    e.g.: make CC=clang LD=llvm-link LDFLAGS="" LDLIBS=""

    Additionally we can easily add our own library (using LDLIBS override)

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,66 @@
-CC ?= gcc
-CFLAGS ?= -Wall -O1 -g
+#----------------------------------------------------------------------
+# Compiler settins (usually there is no need to change these)
+# C compiler and linker
+#
+# Remark: Normally we link using a standard C-compiler invocation
+#
+CC     := gcc
+LD     := gcc
 
-TINIWEB_OBJS = tiniweb.o
-MD5_OBJS = md5main.o \
-	   md5.o
+# Compiler and linker flags
+CFLAGS  := -Wall -std=gnu99 -O1 -g
+LDFLAGS := -g
+LDLIBS  := -lm
 
-all: md5main tiniweb
+#----------------------------------------------------------------------
+# Sources for the tiniweb server
+#
+# Add your own source-files to this variable.
+#
+TINIWEB_SRC = \
+	tiniweb.c
 
+# Sources for the MD5 demo application
+MD5_SRC = \
+	md5main.c \
+	md5.c
+
+# Binaries to be build by default
+PROGRAMS := md5main tiniweb
+
+#----------------------------------------------------------------------
+# Automatically inferred object files (usually there is no need to
+# touch these variables)
+#
+
+TINIWEB_OBJS := $(TINIWEB_SRC:%.c=%.o)
+MD5_OBJS     := $(MD5_SRC:%.c=%.o)
+
+# ----------------------------------------------------------------------
+# Make all target (default target)
+#
+all: $(PROGRAMS)
+
+# ----------------------------------------------------------------------
+# Target to compile the tiniweb server
+#
 tiniweb: $(TINIWEB_OBJS)
+	$(LD) $(LDFLAGS) -o $@ $^ $(LDLIBS)
 
+# ----------------------------------------------------------------------
+# Target to compile the md5main demo application
+#
 md5main: $(MD5_OBJS)
-	$(CC) $(LDFLAGS) -lm $^ -o $@
+	$(LD) $(LDFLAGS) -o $@ $^ $(LDLIBS)
 
+#----------------------------------------------------------------------
+# Target to clean build output
+#
 clean:
-	rm -f $(MD5_OBJS) md5main $(TINIWEB_OBJS) tiniweb
+	-rm -f $(PROGRAMS) $(TINIWEB_OBJS) $(MD5_OBJS)
+
+#----------------------------------------------------------------------
+# Compilation of source files
+#
+%.o: %.c
+	$(CC) $(CFLAGS) -o$@ -c $<
