MD5 Test in Main

--- a/src/Makefile
+++ b/src/Makefile
@@ -19,7 +19,8 @@ LDLIBS  := -lm
 #
 TINIWEB_SRC = \
 	tiniweb.c \
-	secmem.c
+	secmem.c \
+	md5.c
 
 # Sources for the MD5 demo application
 MD5_SRC = \
