added functionality to write cgi response body to stdout

--- a/src/Makefile
+++ b/src/Makefile
@@ -27,6 +27,7 @@ TINIWEB_SRC = \
 	parser.c \
 	normalize.c \
     auth.c \
+    httpresponse.c \
     path.c
 
 # Sources for the MD5 demo application
