added filehandling functions pollandread, retrieveheader pollandread takes an nonblocking fd rebuild of normalizer, it takes now only char* and cgi flag dos-like input \r\n is automatically corrected by retrieveheader so \r is no longer a valid char!

--- a/src/Makefile
+++ b/src/Makefile
@@ -31,7 +31,8 @@ TINIWEB_SRC = \
     staticfile.c \
     path.c \
     pipe.c \
-    secstring.c
+    secstring.c \
+    filehandling.c
 
 # Sources for the MD5 demo application
 MD5_SRC = \
